Fixing: Style failure on iPhone

--- a/public/css/reboto.css
+++ b/public/css/reboto.css
@@ -240,7 +240,7 @@ input[type=text] {
   font-family: "Roboto", sans-serif;
 }
 .input-task {
-    width: 48%;
+    width: 42%;
     height: 42px;
     margin-top: 20px;
     font-size: 1rem;
